# webdav-client

./: .gitattributes  .gitignore  Cargo.toml  README.md
src/: client.rs  global_config.rs  lib.rs  local_file.rs  public.rs  reactive.rs  resources_file.rs
src/client/: enums.rs  format_base_url.rs  impl_traits.rs  mod.rs  traits.rs  webdav_request.rs
src/client/enums/: webdav_method.rs
src/client/error/: impl_display.rs  impl_from.rs  mod.rs
src/client/impl_traits/: impl_account_for_webdav_client.rs  impl_folders.rs  impl_local_folders.rs  to_resource_file_data.rs
src/client/structs/: client_key.rs  client_value.rs  mod.rs  reactive_child_clients.rs  ref_web_dav_child_clients.rs
src/client/traits/: account.rs  folder.rs  folders.rs  local_folders.rs  mod.rs  to_resources_file.rs
src/client/traits_impl/: impl_account.rs  impl_account_for_ref_webdav_child_clients.rs  impl_account_for_webdav_client.rs  impl_folders.rs  impl_url_format.rs  mod.rs  (+3 more)
src/download_config/: mod.rs
src/downloader/: mod.rs
src/event_bus/: mod.rs
src/file_explorer/: mod.rs
src/global_config/: global_config.rs  mod.rs
src/local_file/: impl_traits.rs  public.rs  structs.rs
src/public/: enums.rs  utils.rs
src/reactive/: mod.rs  reactive.rs
src/resource_collector/: mod.rs
src/resource_file/: impl_traits.rs  structs.rs
src/resources_file/: impl_traits.rs  mod.rs  structs.rs  traits.rs
tests/: lib.rs  simple_upload.rs  test.rs
tests/structs_test/: local_file.rs  mod.rs
tests/traits_impl_test/: account.rs  download.rs  folder.rs  local_folders.rs  mod.rs  upload.rs
(+88 files in other folders)
