[package]
name = "webdav-client"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[features]
default = ["friendly-xml"]
friendly-xml = []
show-test-detail = []

[dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "fs",
] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "stream",
    "gzip",
    "cookies",
] }
serde = { version = "1", features = ["derive"] }
quick-xml = { version = "0.38", features = ["serialize"] }
base64 = { version = "0.22" }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
serde_json = "1"
percent-encoding = { version = "2.3" }
async-trait = { version = "0.1.89" }
sha2 = { version = "0.10.9" }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
thiserror = "2.0.16"
url = "2.5.4"


[dev-dependencies]
dotenvy = { version = "0.15.7" }
